2008-08-04  Bharath Acharya  <abharath@novell.com>

	** Fix for bug #543427

	* camel/camel-exchange-folder.c:
	(camel_exchange_folder_add_message):
	* camel/camel-exchange-journal.c: (exchange_entry_play_append),
	(exchange_entry_play_transfer), (update_cache): 
	Use camel_pstring_strdup. The free'ing is handled by message_info_free.

2008-08-04  Bharath Acharya  <abharath@novell.com>

	** Fix for bug #543075

	* camel/camel-exchange-folder.c: (append_message_data): The info is 
	usually NULL when you drag and drop an embedded mail to a folder. This 
	check should get your message back into the desired folder.

2008-08-03  Matthew Barnes  <mbarnes@redhat.com>

	* camel/camel-exchange-folder.c (search_by_uids):
	Remove unused variables.

2008-08-01  Srinivasa Ragavan  <sragavan@novell.com>

	* camel/camel-exchange-folder.c (search_by_uids): Move this to disk
	summary.

2008-08-01  Srinivasa Ragavan  <sragavan@novell.com>

	* camel/camel-exchange-folder.c (search_by_expression): Don't set the
	summary. Search will pick it automatically.

2008-08-01  Srinivasa Ragavan  <sragavan@novell.com>

	* camel/camel-exchange-summary.c: Read href from db properly.

2008-07-30  Milan Crha  <mcrha@redhat.com>
	** Fix for bug #500389

	* camel/camel-exchange-provider.c: (auth_types),
	(exchange_conf_entries), (camel_provider_module_init):
	Option to set different authentication type for GAL and OWA.
	* storage/exchange-autoconfig-wizard.c: (gc_page_next):
	Use default (NTLM, if failed then Plaintext) authentication here.

2008-07-25  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #544031

	* camel/camel-exchange-summary.c: (message_info_to_db):
	* mail/mail-stub-listener.h: (struct _MailStubListener):
	* storage/exchange-component.c: (new_connection):
	* calendar/e-cal-backend-exchange.c: (build_msg):
	* calendar/e-cal-backend-exchange-calendar.c: (send_objects):
	Compiler warnings cleanup.

2008-07-25  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #544513
